added routing between components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
 <app-navbar></app-navbar>
 
 <main role="main" class="container">
-    <app-animal-list></app-animal-list>
-    <app-animal-details></app-animal-details>
-    
-    <app-not-found></app-not-found>
-    <app-homepage></app-homepage>
-
+    <router-outlet></router-outlet>
 </main>
 
 
