--- a/src/app/animal-details/animal-details.component.html
+++ b/src/app/animal-details/animal-details.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="animal">
-  <h1>Description of {{animal.name}}</h1>
+  <h1>Details of {{animal.name}}</h1>
   <ul>
     <li>Size: {{animal.size}}</li>
     <li>Legs: {{animal.legs}}</li>
@@ -10,5 +10,5 @@
 
 <div *ngIf="!animal">
   <h1>Animal not found.</h1>
-  <p>The Animal with the given ID was not found.</p>
+  <p>The Animal with the given ID was not found. You have to call this route by providing a valid animal-ID</p>
 </div>
