--- a/src/app/animal-list/animal-list.component.html
+++ b/src/app/animal-list/animal-list.component.html
@@ -1,3 +1,4 @@
+<h1>Animal List</h1>
 <ul class="list-group">
     <li *ngFor="let animal of animals" class="list-group-item" (click)="onAnimalSelect(animal)">
       {{animal.name}}
