--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,14 +5,14 @@
   
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto center">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li routerLinkActive="active" class="nav-item">
+          <a class="nav-link" routerLink="home">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Animals</a>
+        <li routerLinkActive="active" class="nav-item">
+          <a class="nav-link" routerLink="animals">Animals</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Descriptions</a>
+        <li routerLinkActive="active" class="nav-item">
+          <a class="nav-link" routerLink="animal">Animal-Details</a>
         </li>
       </ul>
     </div>
