Added comments and headings

--- a/src/app/animal-details/animal-details.component.html
+++ b/src/app/animal-details/animal-details.component.html
@@ -10,5 +10,5 @@
 
 <div *ngIf="!animal">
   <h1>Animal not found.</h1>
-  <p>The Animal with the given ID was not found.</p>
+  <p>The Animal with the given ID was not found. You have to call the route by providing a valid animal-ID.</p>
 </div>
