--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,14 @@
 <app-navbar></app-navbar>
 
 <main role="main" class="container">
+    <!-- Begin of content-->
+    <!-- This example-Template contains every component within a single page.-->
+    <!-- After including the routermodule, we want to replace this with only one component at a time-->
     <app-animal-list></app-animal-list>
     <app-animal-details></app-animal-details>
-    
     <app-not-found></app-not-found>
     <app-homepage></app-homepage>
+    <!-- End of content.-->
 
 </main>
 
