--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -1,64 +1,57 @@
 <div class="container">
-  <div class="row main">
-    <div class="main-login main-center">
-    <h5>Sign-up reactive!</h5>
-      <form class="" method="post" action="#">
-        
+    <h1>This should be a reactive form</h1>
+    <form [formGroup]="registerForm">
+      
+      <fieldset>
+        <!--Firstname-->
         <div class="form-group">
-          <label for="name" class="cols-sm-2 control-label">Your Name</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-              <input type="text" class="form-control" name="name" id="name"  placeholder="Enter your Name"/>
-            </div>
+          <label>Firstname:</label>
+          <input class="form-control" type="text" name="firstname" id="firstname" formControlName="firstname">
+          <div *ngIf="!registerForm.controls.firstname.valid && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)" class="alert alert-danger">
+            <div *ngIf="registerForm.controls.firstname.errors.required && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Please enter a name.</div>
+            <div *ngIf="!registerForm.controls.firstname.errors.minLength && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Insert at least 4 characters.</div>
+            <div *ngIf="!registerForm.controls.firstname.errors.pattern && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Only use chars of: a-z, A-Z," ".</div>
           </div>
         </div>
-
+        <!--lastname-->
         <div class="form-group">
-          <label for="email" class="cols-sm-2 control-label">Your Email</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-              <input type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
+          <label>Lastname:</label>
+          <input class="form-control" type="text" name="lastname" id="lastname" formControlName="lastname">
+        </div>
+      </fieldset>
+  
+      <fieldset>
+        <!--E-Mail-->
+        <div class="form-group">
+          <label>E-Mail:</label>
+          <input class="form-control" type="text" name="eMail" id="eMail" formControlName="email">
+        </div>
+      </fieldset>
+  
+      <fieldset>
+          <!--Password-->
+          <div class="form-group">
+            <label>Password:</label>
+            <input class="form-control" type="text" name="password" id="password" formControlName="password">
+            <div style="display:none" class="alert alert-danger">
+                <div style="display:none">Please enter a password.</div>
+                <div style="display:none">Enter at least 8 characters.</div>
+              </div>
+          </div>
+          <!--Password-Repeat-->
+          <div class="form-group">
+            <label>Repeat Password:</label>
+            <input class="form-control" type="text" name="passwordRepeat" id="passwordRepeat" formControlName="passwordrepeat">
+            <div style="display:none" class="alert alert-danger">
+              No match!
             </div>
           </div>
-        </div>
-
-        <div class="form-group">
-          <label for="username" class="cols-sm-2 control-label">Username</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-              <input type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="password" class="cols-sm-2 control-label">Password</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-              <input type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-              <input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group ">
-          <a href="http://deepak646.blogspot.in" target="_blank" type="button" id="button" class="btn btn-primary btn-lg btn-block login-button">Register</a>
-        </div>
-        
-      </form>
-    </div>
-  </div>
-</div>
+      </fieldset>
+      
+      <div class="form-group"> <!-- Submit Button !-->
+        <button (click)="onSubmitTemplateBased(registerForm.value)" [disabled]="!registerForm.valid" type="submit" class="btn btn-primary">Submit</button>
+      </div>	
+    </form>
+    <p>Value: {{ registerForm.value | json }}</p>
+    <p>Validation status: {{registerForm.status }}</p>
+  </div>  
