--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -1,66 +1,55 @@
 <div class="container">
-  <div class="row main">
-    <div class="main-login main-center">
-    <h5>Sign-up template driven!</h5>
-    <form class="" method="post" action="#" #contactForm="ngForm" (ngSubmit)="onSubmitTemplateBased(contactForm.value)">
-        
-      <div class="form-group" ngModelGroup="contact">
-        <label for="name" class="cols-sm-2 control-label">Your Name</label>
-        <div class="cols-sm-10">
-          <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-            <input ngModel type="text" class="form-control" name="name" id="name" placeholder="Enter your Name"/>
-          </div>
-        </div>
-      </div>
-
+  <h1>This should be a template-driven form</h1>
+  <form #registerForm="ngForm" (ngSubmit)="onSubmitTemplateBased(registerForm.value)">
+    
+    <fieldset ngModelGroup="name">
+      <!--Firstname-->
       <div class="form-group">
-        <label for="email" class="cols-sm-2 control-label">Your Email</label>
-        <div class="cols-sm-10">
-          <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-            <input ngModel type="text" class="form-control" name="email" id="email"  placeholder="Enter your Email"/>
-          </div>
+        <label>Firstname:</label>
+        <input class="form-control" type="text" name="firstname" id="firstname" ngModel required minlength="4" pattern="[a-zA-Z ]*" #firstname="ngModel">
+        <div *ngIf="!firstname.valid && (firstname.dirty || firstname.touched)" class="alert alert-danger">
+          <div *ngIf="firstname.errors?.required">Please enter a name.</div>
+          <div *ngIf="firstname.errors?.minlength">Insert at least 4 characters.</div>
+          <div  *ngIf="firstname.errors?.pattern">Only use chars of: a-z, A-Z," ".</div>
         </div>
       </div>
-
-      <div ngModelGroup="login">
-        <div class="form-group">
-          <label for="username" class="cols-sm-2 control-label">Username</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-              <input ngModel type="text" class="form-control" name="username" id="username"  placeholder="Enter your Username"/>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="password" class="cols-sm-2 control-label">Password</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-              <input ngModel type="password" class="form-control" name="password" id="password"  placeholder="Enter your Password"/>
-            </div>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <label for="confirm" class="cols-sm-2 control-label">Confirm Password</label>
-          <div class="cols-sm-10">
-            <div class="input-group">
-              <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-              <input ngModel type="password" class="form-control" name="confirm" id="confirm"  placeholder="Confirm your Password"/>
-            </div>
-          </div>
-        </div>
+      <!--lastname-->
+      <div class="form-group">
+        <label>Lastname:</label>
+        <input class="form-control" type="text" name="lastname" id="lastname" ngModel>
       </div>
+    </fieldset>
 
-      <div class="form-group ">
-        <button id="button" type="submit" class="btn btn-primary btn-lg btn-block login-button" [disabled]="!contactForm.valid">Submit</button>
+    <fieldset ngModelGroup="eMail">
+      <!--E-Mail-->
+      <div class="form-group">
+        <label>E-Mail:</label>
+        <input class="form-control" type="text" name="eMail" id="eMail" [ngModel]=exampleEmail>
       </div>
-      
-    </form>
-    </div>
-  </div>
+    </fieldset>
+
+    <fieldset ngModelGroup="login">
+        <!--Password-->
+        <div class="form-group">
+          <label>Password:</label>
+          <input class="form-control" type="text" name="password" id="password" ngModel required minlength="8" #password="ngModel">
+          <div *ngIf="!password.valid && (password.dirty || password.touched)" class="alert alert-danger">
+              <div *ngIf="password.errors?.required">Please enter a password.</div>
+              <div *ngIf="password.errors?.minlength">Enter at least 8 characters.</div>
+            </div>
+        </div>
+        <!--Password-Repeat-->
+        <div class="form-group">
+          <label>Repeat Password:</label>
+          <input class="form-control" type="text" name="passwordRepeat" id="passwordRepeat" ngModel appValidateEqual="login.password" #passwordRepeat="ngModel">
+          <div *ngIf="passwordRepeat.invalid && (passwordRepeat.dirty || passwordRepeat.touched)" class="alert alert-danger">
+            No match!
+          </div>
+        </div>
+    </fieldset>
+    
+    <div class="form-group"> <!-- Submit Button !-->
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>	
+  </form>
 </div>
