--- a/src/app/reactive-form/reactive-form.component.html
+++ b/src/app/reactive-form/reactive-form.component.html
@@ -9,8 +9,8 @@
           <input class="form-control" type="text" name="firstname" id="firstname" formControlName="firstname">
           <div *ngIf="!registerForm.controls.firstname.valid && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)" class="alert alert-danger">
             <div *ngIf="registerForm.controls.firstname.errors.required && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Please enter a name.</div>
-            <div *ngIf="!registerForm.controls.firstname.errors.minLength && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Insert at least 4 characters.</div>
-            <div *ngIf="!registerForm.controls.firstname.errors.pattern && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Only use chars of: a-z, A-Z," ".</div>
+            <div *ngIf="registerForm.controls.firstname.errors.minlength && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Insert at least 4 characters.</div>
+            <div *ngIf="registerForm.controls.firstname.errors.pattern && (registerForm.controls.firstname.dirty || registerForm.controls.firstname.touched)">Only use chars of: a-z, A-Z," ".</div>
           </div>
         </div>
         <!--lastname-->
@@ -52,6 +52,7 @@
         <button (click)="onSubmitTemplateBased(registerForm.value)" [disabled]="!registerForm.valid" type="submit" class="btn btn-primary">Submit</button>
       </div>	
     </form>
+    
     <p>Value: {{ registerForm.value | json }}</p>
     <p>Validation status: {{registerForm.status }}</p>
   </div>  
