--- a/src/app/template-form/template-form.component.html
+++ b/src/app/template-form/template-form.component.html
@@ -49,7 +49,7 @@
     </fieldset>
     
     <div class="form-group"> <!-- Submit Button !-->
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" [disabled]="!registerForm.valid" class="btn btn-primary">Submit</button>
     </div>	
   </form>
 
