--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -1,12 +1,15 @@
-<div *ngIf="movie">
-  <dl>
-    <dt>Title</dt>
-    <dd>{{movie.title}}</dd>
-    <dt>Directors</dt>
-    <dd>{{movie.directors}}</dd>
-    <dt>Year</dt>
-    <dd>{{movie.year}}</dd>
-    <dt>Description</dt>
-    <dd>{{movie.description}}</dd>
-  </dl>
+<div>
+    <h2>Movie Details</h2>
+    <dl>
+      <dt>Title</dt>
+      <dd><input type="text" [(ngModel)]="movie.title"></dd>
+      <dt>Directors</dt>
+      <dd><input type="text" [(ngModel)]="movie.directors"></dd>
+      <dt>Year</dt>
+      <dd><input type="number" [(ngModel)]="movie.year"></dd>
+      <dt>Description</dt>
+      <dd><textarea rows="3" cols="33" [(ngModel)]="movie.description"></textarea></dd>
+    </dl>
+    <button (click)="apply()">Apply</button>
+    <button (click)="create()">Create</button>
 </div>
