--- a/src/app/movies/movie-overview/movie-overview.component.html
+++ b/src/app/movies/movie-overview/movie-overview.component.html
@@ -1,22 +1,39 @@
-<div>
-  <table>
-    <thead>
-    <tr>
-      <th>#</th>
-      <th>Title</th>
-      <th>Directors</th>
-    </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let movie of movies; let i = index" (click)="selectMovie(movie)" [class.row-active]="isMovieSelected(movie)">
-        <td>{{i}}</td>
-        <td>{{movie.title}}</td>
-        <td>{{movie.directors}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div>
-  <app-movie-details [movie]="selectedMovie" *ngIf="selectedMovie" (movieUpdate)="onMovieUpdated($event)" (movieCreate)="onCreateMovie()"></app-movie-details>
-  <p *ngIf="!selectedMovie">none</p>
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-xs-12 col-md-6">
+      <div class="card bg-light mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Movie List</h5>
+          <table class="table table-striped table-hover">
+            <caption>List of movies with their directors</caption>
+            <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Title</th>
+              <th scope="col">Directors</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let movie of movies$ | async; let i = index" (click)="selectMovie(movie)"
+                [class.table-primary]="isMovieSelected(movie)">
+              <td>{{i}}</td>
+              <td>{{movie.title}}</td>
+              <td>{{movie.directors}}</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-xs-12 col-md-6">
+      <div class="card bg-light mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Movie Details</h5>
+          <app-movie-details [movie]="selectedMovie" *ngIf="selectedMovie" (movieUpdate)="onMovieUpdated($event)"
+                             (movieCreate)="onCreateMovie()"></app-movie-details>
+          <p *ngIf="!selectedMovie">Select a movie</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
