--- a/src/app/movies/movie-overview/movie-overview.component.scss
+++ b/src/app/movies/movie-overview/movie-overview.component.scss
@@ -1,43 +1,6 @@
+
 :host {
-
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  table {
-    border-collapse: collapse;
-
-    thead th {
-      border-bottom: 2px solid black;
-    }
-
-    tbody td {
-      border-bottom: 1px solid black;
-    }
-
-    th, td {
-      padding: 0.2em 1em;
-    }
-
-    th {
-      text-align: left;
-    }
-
-    tr.row-active {
-      background-color: #ffbf00;
-    }
-  }
-
-  div {
+  .card {
     width: 30em;
-    background-color: #fff;
-    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
-    padding: 1em;
-    margin: 1em;
-  }
-}
-
-@media screen and (max-width: 60em) {
-  :host {
-    flex-direction: column;
   }
 }
